SERVER-50879 Coverity analysis defect 115245: Uninitialized scalar field